docs(room): adds route updateRoom in Swagger Documentation
